// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button aria-label="Aria label" data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</section>"
`;

exports[`Checkbox > renders with class correctly 1`] = `
"<div data-slot="root" class="inline-flex">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with defaultValue correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with description correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0-0" data-slot="label" class="">Label</label>
    <p data-slot="description" class="">Description</p>
  </div>
</div>"
`;

exports[`Checkbox > renders with description slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0-0" data-slot="label" class="">Description slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Checkbox > renders with disabled correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-disabled="" disabled="">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with icon correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with id correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="id" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with indeterminate correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:minus" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with indeterminateIcon correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:trash" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with indicator end correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with indicator hidden correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with indicator start correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with label correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0-0" data-slot="label" class="">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Checkbox > renders with label slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0-0" data-slot="label" class="">Label slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Checkbox > renders with modelValue correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with name correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with neutral variant card correctly 1`] = `
"<label data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`Checkbox > renders with neutral variant list correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with pohon correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with primary variant card correctly 1`] = `
"<label data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`Checkbox > renders with primary variant list correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with required correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="true" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0-0" data-slot="label" class="">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Checkbox > renders with size lg correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with size md correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with size sm correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with size xl correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with size xs correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with trueValue/falseValue as number correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with trueValue/falseValue as string correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><span class="iconify i-lucide:check" aria-hidden="true" data-slot="icon"></span></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with trueValue/falseValue unchecked correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Checkbox > renders with value correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;
